10.1.29.alpha.1 - 1st November 2023
- For 'Mute game sounds' ('System'), the 'Arena' setting now includes Nokhudon Proving Grounds.

10.1.28 - 1st November 2023
- For 'Manage widget top' ('Frames'), the configuration panel will now show a warning if Titan Panel is installed and frame adjustment widget top is enabled.
- Fixed two situational Lua errors when clicking the editboxes of 'Enhance dressup' (share outfit online) and 'Show pet save button' ('Interface').
- For 'Enhance tooltip' ('Interface'), the scale slider now applies to LibDBIcon tooltips.
- General code updates.

10.1.27 - 25th October 2023
- For 'Remove transforms' ('System'), added a missing bat costume to Hallow's End: Hallowed Wand.

10.1.26 - 18th October 2023
- Updated 'Faster movie skip' ('System') since the game bug appears to have been fixed.

10.1.24 - 4th October 2023
- The 'Faster movie skip' option ('System') now applies to cinematics once again.  If you are using BugGrabber with BugSack, it will store an error when a cinematic is skipped but it should not interrupt your gameplay and you can safely ignore it.  The error is caused by a bug in the game code which Blizzard will hopefully fix at some point (https://github.com/Stanzilla/WoWUIBugs/issues/483).

10.1.23 - 2nd October 2023
- The 'Faster movie skip' option ('System') now only applies to movies.  It no longer applies to cinematics.
- Fixed a potential issue with 'Automate quests' ('Automation') which may have occasionally shown a Lua error when accepting a quest.

10.1.19 - 6th September 2023
- Updated for game version 10.1.7.

10.1.13 - 26th July 2023
- For 'Sell junk automatically' ('Automation'), increased the exclusion list limit to 2000 characters (was 600).

10.1.12 - 18th July 2023
- For 'Enhance tooltip' ('Interface'), player class and specialisation are now shown below level and race (matching changes in the default UI).
- For 'Mute mount sounds', added a few Winding Slitherdrake sounds to 'Dragonriding'.
